WS2-302: Overrides required for CKE to use spans for tooltips as div cannot be embedded in <p> element. Correct alignment issues in/from CKE and position button so it does not break alignment when embedding.

--- a/css/ckeditor-override.css
+++ b/css/ckeditor-override.css
@@ -82,3 +82,11 @@ ol ol {
 .uds-tooltip-dark .fa-stack .fa-info {
   color: #191919;
 }
+
+/* Media library. Positions the edit button top left of inserted image as default position breaks the alignment of
+images in ckeditor.*/
+button.media-library-item__edit {
+  position: absolute;
+  left: 10px;
+  top: 10px;
+}
